--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -14,29 +14,29 @@
             <img class="logo-image hidden-xs hidden-sm hidden-md async" data-src="images/logo_revblue_trans.png" />
         </a>
         <span id="title-span" class="hidden-xs">MAPPING AMERICA'S FUTURES</span>
-        <div id="hamburger-bun" class="height-adjust">
-            <div id="share-container">
+        <span id="hamburger-bun" class="height-adjust">
+            <span id="share-container">
                 <span id="hidden-share">
                 <a href="http://twitter.com/intent/tweet?text=Interactive%3A%20Test%20possible%20scenarios%20for%20how%20the%20US%20population%20might%20change%20in%202020%20%26%202030%20http%3A%2F%2Furbn.is%2FAmericasFutures%20%23AmericasFutures">
-                    <div id="twitter">
+                    <span id="twitter" class="nav-icon">
                         <i class="fa fa-twitter"></i>
-                    </div>
+                    </span>
                 </a>
                 <a href="https://www.facebook.com/sharer/sharer.php?u=http://urbn.is/AmericasFutures">
-                    <div id="facebook"><i class="fa fa-facebook"></i></div>
+                    <span id="facebook" class="nav-icon"><i class="fa fa-facebook"></i></span>
                 </a>
                 <a href="mailto:%20?Subject=New interactive from the Urban Institute&amp;Body=Hi! I thought you might be interested in this new interactive from the Urban Institute: &quot;Mapping America\'s Futures&quot; http://urbn.is/AmericasFutures">
-                    <div id="mail"><i class="fa fa-envelope-o"></i></div>
+                    <span id="mail" class="nav-icon"><i class="fa fa-envelope-o"></i></span>
                 </a>
               </span>
-                <div id="social">
+                <span id="social" class="nav-icon">
                     <i class="fa fa-share"></i>
-                </div>
-            </div>
-            <div class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                </span>
+            </span>
+            <span class="navbar-toggle nav-icon" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-bars"></i>
-            </div>
-        </div>
+            </span>
+        </span>
     </div>
     <div class="navbar-collapse collapse" id="briefs">
         <div class="container" id="hamburger-meat">
