--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -31,7 +31,7 @@
 
             <div id="control-collapse">
 
-              <div class="col-sm-4">
+              <div class="col-sm-4" id="assumption-buttons">
                 <div class="settings-header">1. Select rates: </div>
                 <label class="select-label">Births</label>
                 <div id="fertility"></div>
