--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -79,13 +79,13 @@
                     </div>
                     <div class="btn-group btn-group-sm">
                       <button type="button" class="btn settings-button active" id="czones">
-                        ZONES</button>
+                        CZ</button>
                     </div>
                   </div>
                 </div>
 
                 <div class="col-sm-7" id="boundary-info">
-                  The map divides the Unisted States into 740 commuting zones- places connected by local economies.
+                  The map divides the United States into 740 commuting zones- places connected by local economies.
                 </div>
 
               </div>
@@ -146,7 +146,10 @@
                   </div>
                 </div>
                 <div class="col-sm-9  col-sm-pull-3">
-                  <h1 id="region"></h1>
+                  <h1 id="region-header">
+                    <span id="region"></span>,
+                    <span id="detail-years"></span>
+                  </h1>
                   <div id="detail-settings"></div>
                 </div>
               </div>
@@ -169,8 +172,7 @@
               <div class="row padded-row">
                 <div class="col-sm-8">
                   <h2 class="detail-header">
-                    General Age and Race Trends,
-                    <span id="detail-years"></span>
+                    General Age and Race Trends, 2000-2030
                   </h2>
                   Test possible scenarios for how the US population might change in 2020 and 2030 by selecting different rates for birth, death and migration. Filter by age, race and geographicboundaries to focus on a sub population.
                 </div>
@@ -259,12 +261,8 @@
               <h5> RESEARCH TEAM </h5>
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
-              <h6 class="credit-title">LEAD PROGRAMMER</h6>
-              Kait Hildner
-              <h6 class="credit-title">KEY RESEARCHERS</h6>
-              Steven Martin, Nan Astone, Liz Peters, Austin Nichols
-              <h6 class="credit-title">PROJECT MANAGER</h6>
-              Pam Blumenthal
+              <h6 class="credit-title">RESEARCH</h6>
+              Nan Astone, Steven Martin, Liz Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
             </div>
           </div>
           <div class="col-sm-3">
