--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<!--[if (lte IE 9) ]>    <html class="lte_ie9"> <![endif]-->
+<!--[if (gt IE 9)|!(IE)]><!--> <html class=""> <!--<![endif]-->
 <head>
 
     <!--
