hide button + TD script ID fix

--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -1,7 +1,7 @@
 <div class="item active" id="feature">
-  <div class="view_button right" id="map">
+<!--   <div class="view_button right" id="map">
     EXPLORE THE <BR/> MAP TOOL
-  </div>
+  </div> -->
   <div class="fill">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2 item-container" id="feature-container">
