--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -106,9 +106,9 @@
 </nav> <div class="container fill">
     <div id="carousel" class="carousel slide">
         <div class="carousel-inner"> <div class="item active" id="feature">
-  <div class="view_button right" id="map">
+<!--   <div class="view_button right" id="map">
     EXPLORE THE <BR/> MAP TOOL
-  </div>
+  </div> -->
   <div class="fill">
     <div class="container">
       <div class="col-lg-8 col-lg-offset-2 item-container" id="feature-container">
@@ -442,9 +442,9 @@
 
  <div class="item" id="map">
 
-  <div class="view_button right" id="feature">
+<!--   <div class="view_button right" id="feature">
     READ THE <BR/> ARTICLE
-  </div>
+  </div> -->
 
   <div class="fill">
     <div class="container">
@@ -614,9 +614,9 @@
               <div class="row padded-row">
                 <div class="col-sm-8">
                   <h2 class="detail-header">
-                    General Age and Race Trends, 2000-2030
+                    Age and Race Trends, 2000-2030
                   </h2>
-                  Test possible scenarios for how the US population might change in 2020 and 2030 by selecting different rates for birth, death and migration. Filter by age, race and geographicboundaries to focus on a sub population.
+                  Distribution of age and race from 2020 to 2030. Data from 2000 to 2010 are actual values and do not change when different birth, death, and migration rates are selected.
                 </div>
               </div>
               <div class="row">
@@ -633,10 +633,10 @@
               <div class="row">
                 <div class="col-sm-12">
                   <h2 class="detail-header">
-                  Detailed Age and Race</h2>
+                  Age and Race Detail</h2>
                 </div>
                 <div class="col-sm-8">
-                  Test possible scenarios for how the US population might change in 2020 and 2030 by selecting different rates for birth, death and migration. Filter by age, race and geographic boundaries to focus on a sub population.
+                  Breakdown of ages by race from 2020 to 2030. Data in 2000 and 2010 are actual values and do not change when different birth, death, and migration rates are selected.
                 </div>
                 <div class="col-sm-4">
                   <div class="btn-group" id="pyramid-select"></div>
@@ -752,10 +752,10 @@
 
     <!-- /build -->
 
-    <script
-        async
-        src="//tdcdn.blob.core.windows.net/toolbar/assets/prod/td.js"
-        data-trackduck-id="548b51585750c0273af7cd49">
+    <script 
+        src="//tdcdn.blob.core.windows.net/toolbar/assets/prod/td.js" 
+        async 
+        data-trackduck-id="54946ea7f14a9117483a0e91">
     </script>
 
 </body>
