--- a/app/layout/dropdown.html
+++ b/app/layout/dropdown.html
@@ -44,7 +44,7 @@
                 <h1 class="dropdown-section-header">INTERACTIVE FEATURES</h1>
                 <hr/>
                 <a class="carousel-link" id="map">Mapping America's Futures</a>
-                <a class="carousel-link" id="feature">What will America look like in 2030?</a>
+                <!-- <a class="carousel-link" id="feature">What will America look like in 2030?</a> -->
                 <a href="http://www.urban.org/about/contact.cfm">Questions or Comments?<br/>Let us know.</a>
             </div>
             <div class="col-md-3 col-lg-3">
