--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -11,7 +11,7 @@
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Mapping America's Futures</title>
+    <title>Mapping America’s Futures</title>
 
     <link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
 
