--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -12,7 +12,7 @@
           <div class="col-md-12">
             <!-- extra container to keep alignment with lower rows -->
             <div class="col-md-12">
-              <h1>Mapping America's Futures</h1>
+              <h1>Mapping America’s Futures</h1>
               <p class="map-more-text">
                 Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether users choose low, average, or high rates for future births, deaths, or migration.
               </p>
@@ -79,7 +79,7 @@
                     </div>
                     <div class="btn-group btn-group-sm">
                       <button type="button" class="btn settings-button active" id="czones">
-                        CZ</button>
+                        CZs</button>
                     </div>
                   </div>
                 </div>
@@ -247,6 +247,13 @@
               <h3> Project Credits </h3>
             </div>
             <div class="col-sm-6">
+              <h5> RESEARCH TEAM </h5>
+              <h6 class="credit-title">PROJECT DIRECTOR</h6>
+              Rolf Pendall
+              <h6 class="credit-title">RESEARCH</h6>
+              Nan Astone, Steven Martin, H. Elizabeth Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
+            </div>
+            <div class="col-sm-6">
               <h5> WEB TOOL AND FEATURE </h5>
               <h6 class="credit-title">WEB DESIGN</h6>
               Adrienne Hapanowicz, Tim Meko
@@ -257,13 +264,7 @@
               <h6 class="credit-title">EDITING</h6>
               Elizabeth Forney
             </div>
-            <div class="col-sm-6">
-              <h5> RESEARCH TEAM </h5>
-              <h6 class="credit-title">PROJECT DIRECTOR</h6>
-              Rolf Pendall
-              <h6 class="credit-title">RESEARCH</h6>
-              Nan Astone, Steven Martin, Liz Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
-            </div>
+
           </div>
           <div class="col-sm-3">
             <h3>Questions or comments? We're listening</h3>
@@ -272,7 +273,7 @@
         </div>
         </div>
         <div class="row">
-          <div id="copyright">Copyright &copy; Urban Institute 2014</div>
+          <div id="copyright">Copyright &copy; Urban Institute 2015</div>
         </div>
       </div>
 
