--- a/app/css/main.css
+++ b/app/css/main.css
@@ -207,8 +207,16 @@ div.no-left-pad {
   ---------------------------------------
   --------------------------------------- */
 
-#detail-well button.settings-button {
+button.btn, 
+div.btn-group,
+select.form-control {
+  border-radius: 0px !important;
+}
+
+
+select.form-control {
   border-radius: 0px;
+  -webkit-appearance: none;
 }
 
 button.btn.settings-button {
@@ -463,8 +471,19 @@ div.pyramid.col-sm-15 {
     }
 }
 
+.feature-image, .plot-image {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.plot-image {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
 .feature-image {
-  margin: 90px 0 40px 0;
+  margin-top: 90px;
+  margin-bottom: 40px;
 }
 
 .jump-to-map {
