--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -427,7 +427,7 @@
             <div class="col-md-12">
               <h1>Mapping America’s Futures</h1>
               <p class="map-more-text">
-                Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether users choose low, average, or high rates for future births, deaths, or migration.
+                Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether you choose low, average, or high rates for future births, deaths, or migration.
               </p>
             </div>
           </div>
@@ -458,7 +458,7 @@
 
                 <div class="col-sm-9 no-left-pad">
 
-                  <div class="settings-header">2. Filter map by: </div>
+                  <div class="settings-header">2. Filter map: </div>
 
                   <label class="select-label">Age</label>
                   <div  id="age"></div>
@@ -469,7 +469,7 @@
 
                 <div class="col-sm-3 border-group" id="year-change-group">
 
-                  <div class="settings-header">3. Year change: </div>
+                  <div class="settings-header">3. Change years: </div>
 
                   <div id="year-select-container">
                     <label class="select-label">From</label>
@@ -481,7 +481,7 @@
                 </div>
 
                 <div class="col-sm-5 no-left-pad">
-                  <label class="select-label">Boundary</label>
+                  <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
 
@@ -525,7 +525,7 @@
           <div class="col-sm-12">
             <div class="col-sm-12">
               <div class="settings-header-legend" id="legend-header">
-                Rollover key to isolate population change range on map
+                Rollover key to isolate population change range on the map.
               </div>
               <div class="legend" id="map_container-legend"></div>
             </div>
@@ -664,7 +664,7 @@
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
               <h6 class="credit-title">RESEARCH</h6>
-              Nan Astone, Steven Martin, H. Elizabeth Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
+              Nan Marie Astone, Steven Martin, H. Elizabeth Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
             </div>
             <div class="col-sm-6">
               <h5> WEB TOOL AND FEATURE </h5>
