--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -39,6 +39,7 @@
             </p>
 
             <img data-src="images/yt_ga-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">AP/Amy Sancetta; Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -146,6 +147,7 @@
             </p>
 
             <img data-src="images/shutterstock_217103686-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -185,6 +187,7 @@
 
 
             <img data-src="images/shutterstock_119607373-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -258,6 +261,7 @@
 
 
             <img data-src="images/AP448161014046-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">AP/David Goldman</div>
 
 
             <div class="quote-wrapper">
