--- a/app/views/index_build.html
+++ b/app/views/index_build.html
@@ -146,6 +146,7 @@
             </p>
 
             <img data-src="images/yt_ga-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">AP/Amy Sancetta; Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -253,6 +254,7 @@
             </p>
 
             <img data-src="images/shutterstock_217103686-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -292,6 +294,7 @@
 
 
             <img data-src="images/shutterstock_119607373-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">Shutterstock</div>
 
             <div class="quote-wrapper">
               <div class="hr-wrapper">
@@ -365,6 +368,7 @@
 
 
             <img data-src="images/AP448161014046-sm.jpg" class="feature-image img-responsive img-rounded async">
+            <div class="photo-credits">AP/David Goldman</div>
 
 
             <div class="quote-wrapper">
