--- a/app/layout/feature.html
+++ b/app/layout/feature.html
@@ -224,28 +224,32 @@
                 <h2>Average Birth, Average Death, Average Migration</h2>
               </div>
               <div class="map-box">
+                <div class="map-plexiglass"></div>
                 <label class='centered'>All Races</label>
-                <div id="races-inline-all"></div>
+                <div id="races-inline-all" class="inline-map"></div>
               </div>
               <div class="map-box">
+                <div class="map-plexiglass"></div>
                 <label class='centered'>White</label>
-                <div id="races-inline-white"></div>
+                <div id="races-inline-white"  class="inline-map"></div>
               </div>
               <div class="inline-map-legend-container">
                 <div class="inline-map-legend" id="races-inline"></div>
               </div>
               <div class="map-box">
+                <div class="map-plexiglass"></div>
                 <label class='centered'>Black</label>
-                <div id="races-inline-black"></div>
+                <div id="races-inline-black"  class="inline-map"></div>
               </div>
               <div class="map-box">
+                <div class="map-plexiglass"></div>
                 <label class='centered'>Hispanic</label>
-                <div id="races-inline-hispanic"></div>
+                <div id="races-inline-hispanic"  class="inline-map"></div>
               </div>
             </div>
 
             <p>
-              The Hispanic share of the population is expected to increase almost everywhere, especially in the South, by 2030. Hispanic women have had higher birthrates than other ethnic groups, but those rates have come down and might come down more in the future. 
+              The Hispanic share of the population is expected to increase almost everywhere, especially in the South, by 2030. Hispanic women have had higher birthrates than other ethnic groups, but those rates have come down and might come down more in the future.
             </p>
 
             <p>
