--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -26,6 +26,7 @@
     <link href="css/map.css" rel="stylesheet">
     <link href="css/charts.css" rel="stylesheet">
     <link href="css/carousel.css" rel="stylesheet">
+    <link href="css/controls.css" rel="stylesheet">
     <link href="css/detail.css" rel="stylesheet">
     <link href="css/main.css" rel="stylesheet">
     <link href="css/select2-bootstrap.css" rel="stylesheet">
