--- a/app/layout/map.html
+++ b/app/layout/map.html
@@ -14,7 +14,7 @@
             <div class="col-md-12">
               <h1>Mapping America’s Futures</h1>
               <p class="map-more-text">
-                Test possible scenarios for how the US population might change in 2020 and 2030. The map will change depending on whether you choose low, average, or high rates for future births, deaths, or migration.
+                Test possible scenarios for how the US population might change in 2020 and 2030. The results will change depending on whether you choose low, average, or high rates for future births, deaths, or migration.
               </p>
             </div>
           </div>
@@ -32,7 +32,7 @@
             <div id="control-collapse">
 
               <div class="col-sm-4" id="assumption-buttons">
-                <div class="settings-header">1. Select rates: </div>
+                <div class="settings-header">Select rates: </div>
                 <label class="select-label">Births</label>
                 <div id="fertility"></div>
                 <label class="select-label">Deaths</label>
@@ -43,9 +43,9 @@
 
               <div class="col-sm-8 border-group">
 
-                <div class="col-sm-9 no-left-pad">
+                <div class="col-sm-9 no-left-pad sm-no-pad" id="ethicity-select">
 
-                  <div class="settings-header">2. Filter map: </div>
+                  <div class="settings-header">Filter map: </div>
 
                   <label class="select-label">Age</label>
                   <div  id="age"></div>
@@ -54,9 +54,9 @@
 
                 </div>
 
-                <div class="col-sm-3 border-group" id="year-change-group">
+                <div class="col-sm-3 border-group no-right-pad sm-no-pad" id="year-change-group">
 
-                  <div class="settings-header">3. Change years: </div>
+                  <div class="settings-header">Change years: </div>
 
                   <div id="year-select-container">
                     <label class="select-label">From</label>
@@ -67,7 +67,7 @@
 
                 </div>
 
-                <div class="col-sm-5 no-left-pad">
+                <div class="col-sm-5 no-left-pad sm-no-pad">
                   <label class="select-label" id="boundary_label">Boundary</label>
 
                   <br/>
@@ -85,7 +85,7 @@
                 </div>
 
                 <div class="col-sm-7" id="boundary-info">
-                  The map divides the United States into 740 commuting zones- places connected by local economies.
+                  The map divides the United States into 740 commuting zones&mdash;places connected by local economies.
                 </div>
 
               </div>
@@ -136,7 +136,7 @@
             <div class="col-sm-12" id="detail-well">
 
               <div class="row">
-                <div class="col-sm-3 col-sm-push-9">
+                <div class="col-xs-12 col-sm-3 col-sm-push-9">
                   <div id="right_controls">
                     <select class="form-control" id="czone-select" data-live-search="true">
                     </select>
@@ -145,7 +145,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-sm-9  col-sm-pull-3">
+                <div class="col-xs-12 col-sm-9  col-sm-pull-3">
                   <h1 id="region-header">
                     <span id="region"></span>,
                     <span id="detail-years"></span>
@@ -158,11 +158,15 @@
 
                 <div class="col-sm-12">
                   <span class="detail-label">  Population growth:
-                    <span id="growth-cell"></span>
+                    <span class="change-block">
+                      <span id="growth-cell"></span>
+                    </span>
                   </span>
                   <span class="detail-label">  Population change:
-                    <span id="start-change"></span> to
-                    <span id="end-change"></span>
+                    <span class="change-block">
+                      <span id="start-change"></span> to
+                      <span id="end-change"></span>
+                    </span>
                   </span>
                 </div>
               </div>
@@ -202,11 +206,11 @@
               </div>
               <div class="row" id="pyramids">
                 <div class="col-sm-12">
-                  <div class="pyramid col-xs-12 col-sm-15" id="all"></div>
-                  <div class="pyramid col-xs-12 col-sm-15" id="white"></div>
-                  <div class="pyramid col-xs-12 col-sm-15" id="black"></div>
-                  <div class="pyramid col-xs-12 col-sm-15" id="hispanic"></div>
-                  <div class="pyramid col-xs-12 col-sm-15" id="other"></div>
+                  <div class="pyramid col-xs-6 col-sm-15" id="all"></div>
+                  <div class="pyramid col-xs-6 col-sm-15" id="white"></div>
+                  <div class="pyramid col-xs-6 col-sm-15" id="black"></div>
+                  <div class="pyramid col-xs-6 col-sm-15" id="hispanic"></div>
+                  <div class="pyramid col-xs-6 col-sm-15" id="other"></div>
                 </div>
               </div>
 
@@ -242,7 +246,7 @@
               <a id="download-full" href="data/Download/AllCZ_AllFert_AllMort_AllMig.csv">All available data (0.5GB).</a>
             </div>
           </div>
-          <div class="col-sm-6" id="credits">
+          <div class="col-sm-6 sm-no-pad" id="credits">
             <div class="col-sm-12">
               <h3> Project Credits </h3>
             </div>
@@ -251,7 +255,13 @@
               <h6 class="credit-title">PROJECT DIRECTOR</h6>
               Rolf Pendall
               <h6 class="credit-title">RESEARCH</h6>
-              Nan Marie Astone, Steven Martin, H. Elizabeth Peters, Austin Nichols, Kait Hildner, Allison Stolte, Pam Blumenthal
+              <div class="credit-name">Nan Marie Astone,</div>
+              <div class="credit-name">Steven Martin,</div>
+              <div class="credit-name">H. Elizabeth Peters,</div>
+              <div class="credit-name">Austin Nichols,</div>
+              <div class="credit-name">Kait Hildner,</div>
+              <div class="credit-name">Allison Stolte,</div>
+              <div class="credit-name">Pam Blumenthal</div>
             </div>
             <div class="col-sm-6">
               <h5> WEB TOOL AND FEATURE </h5>
@@ -267,8 +277,8 @@
 
           </div>
           <div class="col-sm-3">
-            <h3>Questions or comments? We're listening</h3>
-            share your feedback with researchers. AmericasFutures[at]urban.org  <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
+            <h3>Questions? Let us know.</h3>
+            Share your feedback with researchers. AmericasFutures[at]urban.org  <a href="https://twitter.com/search?f=realtime&q=%23americasfutures&src=typd">#AmericasFutures</a>    
           </div>
         </div>
         </div>
