hide Return to Map button on mobile

--- a/app/css/map.css
+++ b/app/css/map.css
@@ -355,7 +355,8 @@ text.us-map-legend-label {
   #ethicity-select,
   .map-control,
   #space-filler,
-  #control-collapse-toggle
+  #control-collapse-toggle,
+  #return-to-map
   {
     display: none !important;
   }
